components/servicemesh-control-plane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: istio-system
    openshift.io/cluster-monitoring: 'true'
  name: istio-system
